--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:extension.helloWorld"
+    "onCommand:extension.getSymbols"
   ],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "extension.helloWorld",
-        "title": "Hello World"
+        "command": "extension.getSymbols",
+        "title": "Get Symbols"
       }
     ]
   },
