--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
                   "type": "string"
                 },
                 "tags": {
-                  "type": "string"
+                  "type": "array",
+                  "items": "string"
                 }
               }
             }
