use DocumentSymbol instead of SymbolInformation

--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
                 },
                 "kindMap": {
                   "type": "object"
+                },
+                "sro": {
+                  "type": "string"
                 }
               }
             }
