Symbol Tree: case of restartTree property. only 1 level

--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
                 },
                 "sro": {
                   "type": "string"
+                },
+                "restartTree": {
+                  "type": "string"
                 }
               }
             }
