--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "vscode": "^1.1.33"
   },
   "categories": [
+    "Programming Languages",
     "Other"
   ],
   "activationEvents": [
@@ -63,6 +64,7 @@
   "engines": {
     "vscode": "^1.33.0"
   },
+  "keywords": [ "symbol", "ctags", "outline" ],
   "scripts": {
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./"
