--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
       {
         "command": "extension.nextSymbol",
         "title": "Go to Next Symbol by Ctags"
+      },
+      {
+        "command": "extension.prevSymbol",
+        "title": "Go to Previous Symbol by Ctags"
       }
     ],
     "configuration": {
