--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
   "engines": {
     "vscode": "^1.33.0"
   },
-  "icon": "./sbc-128.png",
+  "icon": "sbc-128.png",
   "keywords": [
     "symbol",
     "ctags",
