--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "repository": "https://github.com/PrsPrsBK/vs-symbol-by-ctags",
   "devDependencies": {
     "@types/node": "^12.0.0",
+    "@types/vscode": "^1.36.0",
     "vscode": "^1.1.33"
   },
   "categories": [
